--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     list-style: none !important;
     box-sizing: border-box !important;
     text-decoration: none !important;
+    /* outline: 2px solid red; */
 }
 
 .nav-shadow {
@@ -109,6 +110,7 @@
     border: 1px solid var(--bs-black);
     padding: 0px 32px 33px 32px;
     height: 100%;
+    transition: all 300ms linear;
 }
 
 .line::after {
@@ -150,11 +152,7 @@
     border: 1px solid #3C3C3C;
     background: #FFF9E4;
     transform: translateY(-42%);
-}
-
-.card-btn-2:hover {
-    background-color: var(--bs-yellow);
-    border: 1px solid transparent;
+    transition: all 300ms linear;
 }
 
 .btn-padding {
@@ -479,8 +477,8 @@
     box-shadow: 10px 10px 0px 0px #FFCF23;
 }
 
-.card-2:hover.card-2-btn {
-    background: #FFA723;
+.card-2:hover .card-btn-2 {
+    background: #FFCF23;
 }
 
 .dots {
@@ -496,7 +494,7 @@
 
 .game-img {
     position: absolute;
-    bottom: -16%;
+    bottom: 6%;
     right: 10%;
 }
 
@@ -556,6 +554,10 @@ ul {
     pointer-events: none;
 }
 
+.animation {
+    animation: swing 2s linear infinite;
+}
+
 .z-index-3 {
     z-index: 3;
 }
@@ -570,6 +572,22 @@ ul {
     bottom: 57px;
     right: 20px;
     z-index: 2;
+}
+
+.nav-line::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    left: 0;
+    height: 2px;
+    background-color: white;
+    bottom: -12px;
+    transition: all 300ms linear;
+}
+
+.nav-line:hover::after {
+    width: 100%;
+    transition: all 300ms linear;
 }
 
 /* =========nav bar========= */
@@ -682,6 +700,12 @@ ul {
     }
 }
 
+@media (min-width:992px) {
+    .ml-lg-89 {
+        margin-left: 89px;
+    }
+}
+
 @media (min-width:576px) {
     .slider-card {
         border-radius: 15px;
@@ -692,4 +716,11 @@ ul {
         margin: 25px;
         max-width: 891px;
     }
+}
+@media (min-width:992px) {
+    .game-img {
+            position: absolute;
+            bottom: -16%;
+            right: 10%;
+        }
 }
